Created tests and additionally implemented simple methods in CustomArrayList